--- a/ajema.css
+++ b/ajema.css
@@ -1,12 +1,13 @@
 body{
     font-family: sans-serif;
     margin: 0;
-    background-color: #96c1c1;
+    background-color: gray;
 }
 header{
-    background-color: #156363;
+    background-color: white;
     text-align: center;
     padding: 30px 2px;
+    color: blue;
 }
 nav ul{
     list-style-type: none;
@@ -14,6 +15,7 @@ nav ul{
 nav li{
     display: inline-block;
     margin: 2px 10px;
+    color: blue;
 }
 nav a{
     color: blue;
@@ -21,80 +23,53 @@ nav a{
     padding: 10px 15px;
 }
 nav a:hover{
-    background-color: #ffffff;
+    background-color: darkred;
     border-radius: 12px;
 }
 main{
     padding: 20px;
 }
 #profile{
+    border-radius: 50%;
     width: 150px;
     height: 150px;
-    border-radius: 50%;
 }
 #about{
-    background-color: white;
+    background-color: cyan;
     padding: 20px;
     border: lightgrey solid 2px;
     border-radius: 8px;
     box-shadow: 0 0 5px pink;
     margin-bottom: 20px;
-}
-#skills{
-    background-color: white;
-    padding: 20px;
-    border: lightgrey solid 2px;
-    border-radius: 8px;
-    box-shadow: 0 0 5px pink;
-    margin-bottom: 20px;
-}
-#projects{
-        background-color: white;
-    padding: 20px;
-    border: lightgrey solid 2px;
-    border-radius: 8px;
-    box-shadow: 0 0 5px pink;
-    margin-bottom: 20px;
-}
-#projects-container{
-    display:flex;
-    gap: 15px;
-}
-.projo{
-    background-color: lightgrey;
-    padding: 15px;
-    border: white solid 2px;
-    border-radius: 8px;
-    box-shadow: 0 0 5px pink;
-    text-align: center;
-    flex: 200px;
-}
-h3{
-    color: blue;
 }
 h2{
     color: blue;
 }
-h4{
-    color: blue;
+#projects-container{
+    display: flex;
+    gap: 15px;
+    padding: 20px 15px;
 }
-h5{
-    color: blue;
+.projo{
+    background-color: gray;
+    padding: 15px;
+    border: white solid 2px;
+    border-radius: 8px;
+    box-shadow: 0 0 5px;
+    text-align: center;
+    flex: 200px;
 }
-h1{
-    color: blue;
-}
-
 #contact{
-        background-color: white;
+   background-color: cyan;
     padding: 20px;
     border: lightgrey solid 2px;
     border-radius: 8px;
     box-shadow: 0 0 5px pink;
     margin-bottom: 20px;
-}
-#contact h3{
     text-align: center;
+}
+h3{
+    color: blue;
 }
 .contact-form{
     display: flex;
@@ -123,19 +98,10 @@ h1{
     cursor: pointer;
 }
 footer{
-    background-color: #156363;
+      background-color: white;
     text-align: center;
-    color: white;
-    padding: 15px;
+    padding: 30px 2px;
+    color: blue;
     margin-top: 20px;
 }
-/*responsive*/
-@media (max-width: 768px) {
-    nav li{
-        display: block;
-        margin: 15px 0px;
-    }
-    #projects-container{
-    flex-direction: column;
-    }
-}
+
